--- a/.github/workflows/deploy-main.workflow.yml
+++ b/.github/workflows/deploy-main.workflow.yml
@@ -7,6 +7,9 @@ on:
 
 env:
   NODE_VERSION: "16"
+  KUZZLE_PAAS_REGISTRY: harbor.paas.kuzzle.io
+  KUZZLE_PAAS_PROJECT: kawantech
+  KUZZLE_SECRETS_FILE: ./environments/main/secrets.enc.json
 
 jobs:
   push_backend:
@@ -26,7 +29,7 @@ jobs:
       - name: Login to registry
         uses: docker/login-action@v1
         with:
-          registry: ${{ secrets.KUZZLE_PAAS_REGISTRY }}
+          registry: ${{ env.KUZZLE_PAAS_REGISTRY }}
           username: ${{ secrets.KUZZLE_PAAS_USERNAME }}
           password: ${{ secrets.KUZZLE_PAAS_PASSWORD }}
       - name: Login to PaaS NPM registry
@@ -36,7 +39,7 @@ jobs:
         run: |
           cd backend
           npx kourou paas:login --username="${{ secrets.KUZZLE_PAAS_USERNAME }}"
-          cp ~/.npmrc .
+          cp ~/.npmrc ./.npmrc
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
@@ -44,17 +47,16 @@ jobs:
           context: ./backend
           push: true
           build-args: |
-            KUZZLE_VAULT_KEY=${{ secrets.KUZZLE_VAULT_KEY_PROD }}
-          tags: ${{ secrets.KUZZLE_PAAS_REGISTRY }}/${{ secrets.KUZZLE_PAAS_PROJECT_NAME }}/${{ steps.vars.outputs.ref }}/kuzzle:${{ steps.vars.outputs.sha_short }}
+            KUZZLE_SECRETS_FILE=${{ env.KUZZLE_SECRETS_FILE }}
+            KUZZLE_VAULT_KEY=${{ secrets.KUZZLE_VAULT_KEY }}
+            KUZZLE_ENV=${{ steps.vars.outputs.ref }}
+          tags: ${{ env.KUZZLE_PAAS_REGISTRY }}/${{ env.KUZZLE_PAAS_PROJECT }}/${{ steps.vars.outputs.ref }}/kuzzle:${{ steps.vars.outputs.sha_short }}
 
   push_iot_console:
     name: IoT Console artefact
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
-        with:
-          submodules: recursive
-          token: ${{ secrets.ACCESS_TOKEN }}
       - name: Get current commit short SHA
         id: vars
         shell: bash
@@ -64,7 +66,7 @@ jobs:
       - name: Login to registry
         uses: docker/login-action@v1
         with:
-          registry: ${{ secrets.KUZZLE_PAAS_REGISTRY }}
+          registry: ${{ env.KUZZLE_PAAS_REGISTRY }}
           username: ${{ secrets.KUZZLE_PAAS_USERNAME }}
           password: ${{ secrets.KUZZLE_PAAS_PASSWORD }}
       - uses: actions/setup-node@v1.4.4
@@ -77,7 +79,8 @@ jobs:
         run: |
           cd iot-console
           npx kourou paas:login --username="${{ secrets.KUZZLE_PAAS_USERNAME }}"
-          cp ~/.npmrc .
+          git submodule update --init --recursive
+          cp ~/.npmrc ./.npmrc
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
@@ -86,48 +89,7 @@ jobs:
           file: ./iot-console/Dockerfile
           context: ./iot-console
           push: true
-          tags: ${{ secrets.KUZZLE_PAAS_REGISTRY }}/${{ secrets.KUZZLE_PAAS_PROJECT_NAME }}/${{ steps.vars.outputs.ref }}/iot:${{ steps.vars.outputs.sha_short }}
-
-  push_frontend_custom:
-    name: Frontend Custom artefact
-    runs-on: ubuntu-18.04
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          submodules: recursive
-          token: ${{ secrets.ACCESS_TOKEN }}
-      - name: Get current commit short SHA
-        id: vars
-        shell: bash
-        run: |
-          echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
-          echo "::set-output name=ref::$(echo $GITHUB_REF | cut -d / -f 3)"
-      - name: Login to registry
-        uses: docker/login-action@v1
-        with:
-          registry: ${{ secrets.KUZZLE_PAAS_REGISTRY }}
-          username: ${{ secrets.KUZZLE_PAAS_USERNAME }}
-          password: ${{ secrets.KUZZLE_PAAS_PASSWORD }}
-      - uses: actions/setup-node@v1.4.4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-      - name: Login PaaS + clone submodules
-        shell: bash
-        env:
-          KUZZLE_PAAS_PASSWORD: ${{ secrets.KUZZLE_PAAS_PASSWORD }}
-        run: |
-          cd frontend-custom
-          npx kourou paas:login --username="${{ secrets.KUZZLE_PAAS_USERNAME }}"
-          cp ~/.npmrc .
-      - name: Build and push
-        uses: docker/build-push-action@v2
-        with:
-          build-args: |
-            VUE_APP_BACKEND=${{ steps.vars.outputs.ref }}
-          file: ./frontend-custom/Dockerfile
-          context: ./frontend-custom
-          push: true
-          tags: ${{ secrets.KUZZLE_PAAS_REGISTRY }}/${{ secrets.KUZZLE_PAAS_PROJECT_NAME }}/${{ steps.vars.outputs.ref }}/webapp:${{ steps.vars.outputs.sha_short }}
+          tags: ${{ env.KUZZLE_PAAS_REGISTRY }}/${{ env.KUZZLE_PAAS_PROJECT }}/${{ steps.vars.outputs.ref }}/iot:${{ steps.vars.outputs.sha_short }}
 
   deploy_backend:
     name: Deploy backend artefact
@@ -152,7 +114,7 @@ jobs:
         run: |
           cd backend
           npx kourou paas:login --username="${{ secrets.KUZZLE_PAAS_USERNAME }}"
-          npx kourou paas:deploy ${{ steps.vars.outputs.ref }} api ${{ secrets.KUZZLE_PAAS_REGISTRY }}/${{ secrets.KUZZLE_PAAS_PROJECT_NAME }}/${{ steps.vars.outputs.ref }}/kuzzle:${{ steps.vars.outputs.sha_short }}
+          npx kourou paas:deploy ${{ steps.vars.outputs.ref }} api ${{ env.KUZZLE_PAAS_REGISTRY }}/${{ env.KUZZLE_PAAS_PROJECT }}/${{ steps.vars.outputs.ref }}/kuzzle:${{ steps.vars.outputs.sha_short }}
 
   deploy_iot_console:
     name: Deploy IoT Console App to server
@@ -177,29 +139,4 @@ jobs:
         run: |
           cd iot-console
           npx kourou paas:login --username="${{ secrets.KUZZLE_PAAS_USERNAME }}"
-          npx kourou paas:deploy ${{ steps.vars.outputs.ref }} iot ${{ secrets.KUZZLE_PAAS_REGISTRY }}/${{ secrets.KUZZLE_PAAS_PROJECT_NAME }}/${{ steps.vars.outputs.ref }}/iot:${{ steps.vars.outputs.sha_short }}
-
-  deploy_frontend_custom:
-    name: Deploy Custom Frontend App to server
-    runs-on: ubuntu-18.04
-    needs: [push_frontend_custom]
-    steps:
-      - uses: actions/checkout@v2
-      - name: Get current commit short SHA
-        id: vars
-        shell: bash
-        run: |
-          echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
-          echo "::set-output name=ref::$(echo $GITHUB_REF | cut -d / -f 3)"
-      - name: Install NodeJS
-        uses: actions/setup-node@v1.4.4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-      - name: Login PaaS + deploy
-        shell: bash
-        env:
-          KUZZLE_PAAS_PASSWORD: ${{ secrets.KUZZLE_PAAS_PASSWORD }}
-        run: |
-          cd frontend-custom
-          npx kourou paas:login --username="${{ secrets.KUZZLE_PAAS_USERNAME }}"
-          npx kourou paas:deploy ${{ steps.vars.outputs.ref }} webapp ${{ secrets.KUZZLE_PAAS_REGISTRY }}/${{ secrets.KUZZLE_PAAS_PROJECT_NAME }}/${{ steps.vars.outputs.ref }}/webapp:${{ steps.vars.outputs.sha_short }}
+          npx kourou paas:deploy ${{ steps.vars.outputs.ref }} webapp ${{ env.KUZZLE_PAAS_REGISTRY }}/${{ env.KUZZLE_PAAS_PROJECT }}/${{ steps.vars.outputs.ref }}/iot:${{ steps.vars.outputs.sha_short }}
