--- a/.github/workflows/deploy-main.workflow.yml
+++ b/.github/workflows/deploy-main.workflow.yml
@@ -6,15 +6,14 @@ on:
       - main
 
 env:
-  NODE_VERSION: "16"
   KUZZLE_PAAS_REGISTRY: harbor.paas.kuzzle.io
-  KUZZLE_PAAS_PROJECT: kawantech
-  KUZZLE_SECRETS_FILE: ./environments/main/secrets.enc.json
+  KUZZLE_PAAS_PROJECT: TO_UPDATE
+  KUZZLE_PAAS_ENVIRONMENT: main
 
 jobs:
   push_backend:
     name: Backend artefact
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v2
         with:
@@ -33,13 +32,12 @@ jobs:
           username: ${{ secrets.KUZZLE_PAAS_USERNAME }}
           password: ${{ secrets.KUZZLE_PAAS_PASSWORD }}
       - name: Login to PaaS NPM registry
-        shell: bash
-        env:
-          KUZZLE_PAAS_PASSWORD: ${{ secrets.KUZZLE_PAAS_PASSWORD }}
-        run: |
-          cd backend
-          npx kourou paas:login --username="${{ secrets.KUZZLE_PAAS_USERNAME }}"
-          cp ~/.npmrc ./.npmrc
+        uses: kuzzleio/paas-action@v0.5.7
+        with:
+          username: ${{ secrets.KUZZLE_PAAS_USERNAME }}
+          password: ${{ secrets.KUZZLE_PAAS_PASSWORD }}
+          npmrc_output_dir: ./backend
+          login_only: true
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
@@ -47,16 +45,40 @@ jobs:
           context: ./backend
           push: true
           build-args: |
-            KUZZLE_SECRETS_FILE=${{ env.KUZZLE_SECRETS_FILE }}
+            KUZZLE_ENV=${{ env.KUZZLE_PAAS_ENVIRONMENT }}
             KUZZLE_VAULT_KEY=${{ secrets.KUZZLE_VAULT_KEY }}
-            KUZZLE_ENV=${{ steps.vars.outputs.ref }}
-          tags: ${{ env.KUZZLE_PAAS_REGISTRY }}/${{ env.KUZZLE_PAAS_PROJECT }}/${{ steps.vars.outputs.ref }}/kuzzle:${{ steps.vars.outputs.sha_short }}
+          tags: ${{ env.KUZZLE_PAAS_REGISTRY }}/${{ env.KUZZLE_PAAS_PROJECT }}/${{ steps.vars.outputs.ref }}/api:${{ steps.vars.outputs.sha_short }}
 
-  push_iot_console:
-    name: IoT Console artefact
-    runs-on: ubuntu-18.04
+  deploy_backend:
+    name: Deploy backend artefact
+    runs-on: ubuntu-22.04
+    needs: [push_backend]
     steps:
       - uses: actions/checkout@v2
+      - name: Get current commit short SHA
+        id: vars
+        shell: bash
+        run: |
+          echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
+          echo "::set-output name=ref::$(echo $GITHUB_REF | cut -d / -f 3)"
+      - name: Deploy to PaaS
+        uses: kuzzleio/paas-action@v0.5.7
+        with:
+          username: ${{ secrets.KUZZLE_PAAS_USERNAME }}
+          password: ${{ secrets.KUZZLE_PAAS_PASSWORD }}
+          project: ${{ env.KUZZLE_PAAS_PROJECT }}
+          environment: ${{ env.KUZZLE_PAAS_ENVIRONMENT }}
+          application: api
+          image: ${{ env.KUZZLE_PAAS_REGISTRY }}/${{ env.KUZZLE_PAAS_PROJECT }}/${{ env.KUZZLE_PAAS_ENVIRONMENT }}/api:${{ steps.vars.outputs.sha_short }}
+
+  push_iot_console:
+    name: Backend artefact
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: recursive
+          token: ${{ secrets.ACCESS_TOKEN }}
       - name: Get current commit short SHA
         id: vars
         shell: bash
@@ -69,56 +91,27 @@ jobs:
           registry: ${{ env.KUZZLE_PAAS_REGISTRY }}
           username: ${{ secrets.KUZZLE_PAAS_USERNAME }}
           password: ${{ secrets.KUZZLE_PAAS_PASSWORD }}
-      - uses: actions/setup-node@v1.4.4
+      - name: Login to PaaS NPM registry
+        uses: kuzzleio/paas-action@v0.5.7
         with:
-          node-version: ${{ env.NODE_VERSION }}
-      - name: Login PaaS + clone submodules
-        shell: bash
-        env:
-          KUZZLE_PAAS_PASSWORD: ${{ secrets.KUZZLE_PAAS_PASSWORD }}
-        run: |
-          cd iot-console
-          npx kourou paas:login --username="${{ secrets.KUZZLE_PAAS_USERNAME }}"
-          git submodule update --init --recursive
-          cp ~/.npmrc ./.npmrc
+          username: ${{ secrets.KUZZLE_PAAS_USERNAME }}
+          password: ${{ secrets.KUZZLE_PAAS_PASSWORD }}
+          npmrc_output_dir: ./iot-console
+          login_only: true
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
-          build-args: |
-            VUE_APP_BACKEND=${{ steps.vars.outputs.ref }}
           file: ./iot-console/Dockerfile
           context: ./iot-console
           push: true
+          build-args: |
+            KUZZLE_ENV=${{ env.KUZZLE_PAAS_ENVIRONMENT }}
+            KUZZLE_VAULT_KEY=${{ secrets.KUZZLE_VAULT_KEY }}
           tags: ${{ env.KUZZLE_PAAS_REGISTRY }}/${{ env.KUZZLE_PAAS_PROJECT }}/${{ steps.vars.outputs.ref }}/iot:${{ steps.vars.outputs.sha_short }}
 
-  deploy_backend:
-    name: Deploy backend artefact
-    runs-on: ubuntu-18.04
-    needs: [push_backend]
-    steps:
-      - uses: actions/checkout@v2
-      - name: Get current commit short SHA
-        id: vars
-        shell: bash
-        run: |
-          echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
-          echo "::set-output name=ref::$(echo $GITHUB_REF | cut -d / -f 3)"
-      - name: Install NodeJS
-        uses: actions/setup-node@v1.4.4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-      - name: Login PaaS + deploy
-        shell: bash
-        env:
-          KUZZLE_PAAS_PASSWORD: ${{ secrets.KUZZLE_PAAS_PASSWORD }}
-        run: |
-          cd backend
-          npx kourou paas:login --username="${{ secrets.KUZZLE_PAAS_USERNAME }}"
-          npx kourou paas:deploy ${{ steps.vars.outputs.ref }} api ${{ env.KUZZLE_PAAS_REGISTRY }}/${{ env.KUZZLE_PAAS_PROJECT }}/${{ steps.vars.outputs.ref }}/kuzzle:${{ steps.vars.outputs.sha_short }}
-
   deploy_iot_console:
-    name: Deploy IoT Console App to server
-    runs-on: ubuntu-18.04
+    name: Deploy backend artefact
+    runs-on: ubuntu-22.04
     needs: [push_iot_console]
     steps:
       - uses: actions/checkout@v2
@@ -128,15 +121,12 @@ jobs:
         run: |
           echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
           echo "::set-output name=ref::$(echo $GITHUB_REF | cut -d / -f 3)"
-      - name: Install NodeJS
-        uses: actions/setup-node@v1.4.4
+      - name: Deploy to PaaS
+        uses: kuzzleio/paas-action@v0.5.7
         with:
-          node-version: ${{ env.NODE_VERSION }}
-      - name: Login PaaS + deploy
-        shell: bash
-        env:
-          KUZZLE_PAAS_PASSWORD: ${{ secrets.KUZZLE_PAAS_PASSWORD }}
-        run: |
-          cd iot-console
-          npx kourou paas:login --username="${{ secrets.KUZZLE_PAAS_USERNAME }}"
-          npx kourou paas:deploy ${{ steps.vars.outputs.ref }} webapp ${{ env.KUZZLE_PAAS_REGISTRY }}/${{ env.KUZZLE_PAAS_PROJECT }}/${{ steps.vars.outputs.ref }}/iot:${{ steps.vars.outputs.sha_short }}
+          username: ${{ secrets.KUZZLE_PAAS_USERNAME }}
+          password: ${{ secrets.KUZZLE_PAAS_PASSWORD }}
+          project: ${{ env.KUZZLE_PAAS_PROJECT }}
+          environment: ${{ env.KUZZLE_PAAS_ENVIRONMENT }}
+          application: webapp
+          image: ${{ env.KUZZLE_PAAS_REGISTRY }}/${{ env.KUZZLE_PAAS_PROJECT }}/${{ env.KUZZLE_PAAS_ENVIRONMENT }}/iot:${{ steps.vars.outputs.sha_short }}
