--- a/backend/package.json
+++ b/backend/package.json
@@ -31,16 +31,11 @@
   "devDependencies": {
     "@types/lodash": "^4.14.182",
     "@types/node": "^17.0.32",
-    "@typescript-eslint/eslint-plugin": "^5.23.0",
-    "@typescript-eslint/parser": "^5.23.0",
     "cucumber": "^6.0.5",
     "ergol": "^1.0.2",
-    "eslint": "^8.15.0",
+    "eslint-plugin-kuzzle": "^0.0.6",
     "should": "^13.2.3",
     "ts-node": "^10.7.0",
     "typescript": "~4.6.4"
-  },
-  "files": [
-    "dist/**/"
-  ]
+  }
 }
