--- a/iot-console/package.json
+++ b/iot-console/package.json
@@ -39,6 +39,6 @@
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
     "typescript": "~4.5.5",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "2.6.14"
   }
 }
