--- a/iot-console/package.json
+++ b/iot-console/package.json
@@ -9,6 +9,7 @@
     "test:lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.2.1",
     "@kuzzleio/dashboard-builder": "^0.5.11",
     "@kuzzleio/iot-console": "^0.4.10",
     "@kuzzleio/kuzzle-application-builder": "^0.7.7",
