--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,17 +9,19 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "6.1.*",
-    "@kuzzleio/dashboard-builder": "0.6.*",
-    "@kuzzleio/iot-console": "0.7.*",
-    "@kuzzleio/kuzzle-application-builder": "0.8.*",
+    "@kuzzleio/dashboard-builder": "0.*.*",
+    "@kuzzleio/iot-console": "^3.0.0-rc5",
+    "@kuzzleio/kuzzle-application-builder": "0.8.5",
     "bootstrap-vue": "2.23.*",
-    "lodash": "^4.17.21",
+    "@types/lodash": "4.14.*",
+    "core-js": "3.8.*",
+    "lodash": "4.17.*",
+    "tsconfig-paths-webpack-plugin": "^4.0.0",
     "vue": "2.7.*",
-    "vue-2-breadcrumbs": "^0.8.0",
-    "vue-i18n": "8.28.*",
+    "vue-class-component": "7.2.*",
     "vue-plugin-kuzzle": "^4.4.0",
     "vue-property-decorator": "9.1.*",
-    "vue-router": "3.5.*",
+    "vue-router": "3.6.*",
     "vuex": "3.6.*"
   },
   "devDependencies": {
