--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -15,35 +15,33 @@
     "build": "tsc --build tsconfig.json",
     "prettier": "npx prettier lib/ tests/ --write",
     "clean": "touch app.ts && npm run build | grep TSFILE | cut -d' ' -f 2 | xargs rm",
-    "fixtures": "npm run fixtures:asset_tracking && npm run fixtures:air_quality",
-    "fixtures:asset_tracking": "bash fixtures/asset_tracking/load.sh",
-    "fixtures:air_quality": "bash fixtures/air_quality/load.sh"
+    "fixtures": "bash fixtures/load.sh"
   },
   "main": "app.ts",
   "license": "Apache-2.0",
   "dependencies": {
-    "@kuzzleio/dashboard-builder": "0.6.1",
-    "@kuzzleio/iot-backend": "3.1.0",
-    "@kuzzleio/plugin-multi-tenancy": "1.1.3",
-    "@kuzzleio/plugin-workflows": "0.4.6",
-    "@kuzzleio/scheduler": "1.1.7",
-    "kuzzle": "2.20.1",
-    "kuzzle-device-manager": "2.0.6",
-    "kuzzle-plugin-hermes-messenger": "0.3.0",
+    "@kuzzleio/dashboard-builder-backend": ">=0.6.5",
+    "@kuzzleio/iot-backend": ">=3.1.5",
+    "@kuzzleio/plugin-multi-tenancy": ">=1.1.4",
+    "@kuzzleio/plugin-workflows": ">=0.4.6",
+    "@kuzzleio/scheduler": ">=1.1.7",
+    "kuzzle": ">=2.20.3",
+    "kuzzle-device-manager": ">=2.1.0",
+    "kuzzle-plugin-hermes-messenger": ">=0.3.0",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@types/jest": "^29.2.5",
+    "@types/jest": "^29.4.0",
     "@types/lodash": "^4.14.191",
-    "@types/node": "^14",
+    "@types/node": "^18",
     "ergol": "^1.0.2",
     "eslint-plugin-kuzzle": "^0.0.6",
-    "jest": "^29.3.1",
-    "kuzzle-sdk": "^7.10.3",
-    "ts-jest": "^29.0.3",
+    "jest": "^29.4.2",
+    "kuzzle-sdk": "^7.10.5",
+    "ts-jest": "^29.0.5",
     "should": "13.2.3",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.5"
   },
   "files": [
     "dist/**/"
