--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "turbo run dev --parallel",
     "test:lint": "turbo run test:lint",
     "test:functional": "turbo run test:functional",
-    "postinstall": "sh ./postinstall.sh",
+    "dev:api": "npm run --workspace kiotp-demo-api dev",
+    "dev:web": "npm run --workspace kiotp-demo-web dev",
     "prettier": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
