update tsconfig setup

--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "apps/*"
   ],
   "scripts": {
-    "build": "turbo run build",
-    "dev": "turbo run dev --parallel",
+    "build": "TS_CONFIG='../../frontend.tsconfig.json' turbo run build",
+    "dev": "TS_CONFIG='../../frontend.tsconfig.json' turbo run dev --parallel",
     "test:lint": "turbo run test:lint",
     "test:functional": "turbo run test:functional",
     "dev:api": "npm run --workspace kiotp-demo-api dev",
-    "dev:web": "npm run --workspace kiotp-demo-web dev",
+    "dev:web": "TS_CONFIG='../../frontend.tsconfig.json' npm run --workspace kiotp-demo-web dev",
     "prettier": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
