--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -20,8 +20,8 @@
     ],
     "paths": {
       "@/*": ["src/*"],
-      // Alias peerDependencies to fix resolve
-      "vue": ["../../node_modules/vue"],
+      // Alias peerDependencies to fix resolve (prevent error `i.util`)
+      "vue": ["node_modules/vue"],
     },
     "lib": [
       "esnext",
