--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "6.1.*",
-    "@kuzzleio/dashboard-builder": "0.6.*",
+    "@kuzzleio/dashboard-builder-frontend": ">= 0.6",
     "@kuzzleio/iot-console": "^3.0.0-rc6",
     "@kuzzleio/kuzzle-application-builder": ">= 0.9",
     "bootstrap-vue": "2.23.*",
