--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "6.1.*",
     "@kuzzleio/dashboard-builder-frontend": ">= 0.7",
-    "@kuzzleio/iot-console": "^3.0.0-rc17",
+    "@kuzzleio/iot-console": "^3",
     "@kuzzleio/kuzzle-application-builder": ">= 0.9",
     "bootstrap-vue": "2.23.*",
     "lodash": "4.17.*",
