Update template with linting

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,7 +8,7 @@
     "dev": "vite",
     "build": "vite build",
     "test": "npm run test:lint && npm run test:types",
-    "test:lint": "eslint src --ext .ts,.vue",
+    "test:lint": "eslint src --ext .ts,.vue --fix",
     "test:lint:fix": "npm run test:lint -- -fix",
     "test:types": "vue-tsc --noEmit -p tsconfig.test.json"
   },
@@ -26,8 +26,9 @@
     "@types/lodash": "4.14.*",
     "@vitejs/plugin-vue2": "2.2.0",
     "autoprefixer": "10.4.15",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-tailwindcss": "3.13.0",
-    "eslint-plugin-vue-kuzzle": "0.0.10",
+    "eslint-plugin-vue-kuzzle": "0.0.12",
     "kuzzle-device-manager-types": "2.4.0-beta.5",
     "sass": "1.63.*",
     "tailwindcss": "3.3.3",
