--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -10,7 +10,7 @@
     "dev": "NODE_ENV=development ergol app.ts -c ergol.config.json",
     "format": "prettier lib/ tests/ --write",
     "test": "npm run test:lint && npm run test:types && npm run test:functional",
-    "test:lint": "eslint ./lib ./tests --ext .ts",
+    "test:lint": "eslint ./lib ./tests --ext .ts --fix",
     "test:lint:fix": "npm run test:lint -- --fix",
     "test:types": "tsc --noEmit -p tsconfig.test.json",
     "test:functional": "jest --runInBand",
@@ -35,6 +35,7 @@
     "@types/node": "18",
     "ergol": "1.0.2",
     "eslint-plugin-kuzzle": "0.0.12",
+    "eslint-plugin-prettier": "^5.0.0",
     "jest": "29.4.3",
     "kuzzle-sdk": "7.11.*",
     "ts-jest": "29.0.5",
