--- a/.github/actions/functional-test-backend/action.yml
+++ b/.github/actions/functional-test-backend/action.yml
@@ -8,5 +8,6 @@ runs:
       run: |
         npm ci
         docker compose up -d
+        docker compose logs
         bash ./.github/actions/functional-test-backend/wait-kuzzle.sh
         npm run test:functional
