--- a/turbo.json
+++ b/turbo.json
@@ -2,14 +2,18 @@
   "$schema": "https://turbo.build/schema.json",
   "pipeline": {
     "build": {
-      "dependsOn": ["^build"],
-      "outputs": ["dist/**"]
+      "dependsOn": [
+        "^build"
+      ],
+      "outputs": [
+        "dist/**"
+      ]
     },
     "publish-packages": {
       "cache": false
     },
     "test:lint": {
-      "outputs": []
+      "cache": false
     },
     "dev": {
       "cache": false
