Update tests, actions

--- a/.github/actions/functional-test-backend/action.yml
+++ b/.github/actions/functional-test-backend/action.yml
@@ -7,6 +7,7 @@ runs:
       shell: bash
       run: |
         set +e
+        npm ci
         export CI=true
         docker compose up -d
         bash ./.github/actions/functional-test-backend/wait-kuzzle.sh
