--- a/.github/workflows/development.workflow.yml
+++ b/.github/workflows/development.workflow.yml
@@ -22,10 +22,8 @@ jobs:
       - name: Login to PaaS NPM registry
         uses: kuzzleio/paas-action@v1.0.3
         with:
-          paas_api: https://console.paas-local.kuzzle.io
-          paas_packages: packages.paas.kuzzle.io
-          username: ${{ secrets.CORE_TEAM_PAAS_USERNAME }}
-          password: ${{ secrets.CORE_TEAM_PAAS_PASSWORD }}
+          username: ${{ secrets.KUZZLE_PAAS_USERNAME }}
+          password: ${{ secrets.KUZZLE_PAAS_PASSWORD }}
           login_only: true
           npmrc_output_dir: ./
       
@@ -51,10 +49,8 @@ jobs:
       - name: Login to PaaS NPM registry
         uses: kuzzleio/paas-action@v1.0.3
         with:
-          paas_api: https://console.paas-local.kuzzle.io
-          paas_packages: packages.paas.kuzzle.io
-          username: ${{ secrets.CORE_TEAM_PAAS_USERNAME }}
-          password: ${{ secrets.CORE_TEAM_PAAS_PASSWORD }}
+          username: ${{ secrets.KUZZLE_PAAS_USERNAME }}
+          password: ${{ secrets.KUZZLE_PAAS_PASSWORD }}
           login_only: true
           npmrc_output_dir: ./
 
