--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kiotp-demo-web",
+  "name": "template-iot-web",
   "title": "Demo - IoT Console",
   "version": "0.0.0",
   "private": true,
@@ -14,30 +14,24 @@
     "ci:types": "vue-tsc --version && npm run test:types"
   },
   "dependencies": {
-    "bootstrap-vue": "2.23.*",
     "lodash": "^4.17.21",
-    "vue": "2.7.*",
     "vue-plugin-kuzzle": "^4.5.0",
-    "vue-router": "3.6.*",
-    "vuex": "3.6.*",
     "@fortawesome/fontawesome-free": "6.2.*",
-    "@kuzzleio/iot-platform-frontend": "^3.1.0-beta.30",
-    "@types/lodash": "4.14.*",
+    "@kuzzleio/iot-platform-frontend": "^3.1.0-beta.41",
+    "@types/lodash": "4.17.*",
     "@vuelidate/core": "2.0.*",
-    "ace-builds": "1.17",
-    "kuzzle-device-manager-types": "2.4.0-beta.13"
+    "kuzzle-device-manager-types": "2.4.0-beta.15"
   },
   "devDependencies": {
     "@types/lodash": "4.14.*",
     "@vitejs/plugin-vue2": "^2.2.0",
     "autoprefixer": "^10.4.15",
-    "eslint-plugin-tailwindcss": "^3.13.0",
+    "eslint-plugin-tailwindcss": "^3.14.3",
     "eslint-plugin-vue-kuzzle": "^0.0.12",
     "sass": "1.63.*",
-    "tailwindcss": "^3.3.3",
+    "tailwindcss": "^3.4.1",
     "typescript": "5.1.*",
     "vite": "^4.4.6",
-    "vue-template-compiler": "2.7.*",
     "vue-tsc": "^1.8.10"
   }
 }
