--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "eslint": "8.50.0",
     "eslint-plugin-kuzzle": "0.0.12",
     "prettier": "^3.0.1",
-    "turbo": "latest"
+    "turbo": "latest",
+    "typescript": "5.1.*"
   },
   "engines": {
     "node": ">=18.17.1"
