--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "eslint": "8.50.0",
     "eslint-plugin-kuzzle": "0.0.12",
+    "eslint-plugin-prettier": "^5.0.0",
     "prettier": "^3.0.1",
     "turbo": "latest",
     "typescript": "5.1.*"
