--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,16 +14,15 @@
     "ci:types": "vue-tsc --version && npm run test:types"
   },
   "dependencies": {
-    "lodash": "^4.17.21",
-    "vue-plugin-kuzzle": "^4.5.0",
     "@fortawesome/fontawesome-free": "6.2.*",
-    "@kuzzleio/iot-platform-frontend": "3.1.0-beta.44",
-    "@types/lodash": "4.17.*",
+    "@kuzzleio/iot-platform-frontend": "3.1.0-beta.45",
     "@vuelidate/core": "2.0.*",
-    "kuzzle-device-manager-types": "2.4.0-beta.15"
+    "kuzzle-device-manager-types": "2.4.0-beta.16",
+    "lodash": "^4.17.21",
+    "vue-plugin-kuzzle": "^4.5.0"
   },
   "devDependencies": {
-    "@types/lodash": "4.14.*",
+    "@types/lodash": "4.17",
     "@vitejs/plugin-vue2": "^2.2.0",
     "autoprefixer": "^10.4.15",
     "eslint-plugin-tailwindcss": "^3.14.3",
