chore: update iot-platform 3.1.0-beta.49

--- a/turbo.json
+++ b/turbo.json
@@ -1,7 +1,11 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "pipeline": {
+  "tasks": {
     "build": {
+      "env": [
+        "VITE_*",
+        "VUE_*"
+      ],
       "dependsOn": [
         "^build"
       ],
