--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -22,13 +22,13 @@
   "main": "app.ts",
   "license": "Apache-2.0",
   "dependencies": {
-    "@kuzzleio/iot-platform-backend": "3.1.0-beta.41",
+    "@kuzzleio/iot-platform-backend": "3.1.0-beta.49",
     "kuzzle": "^2",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@types/jest": "^29.4.0",
-    "@types/lodash": "^4.14.191",
+    "@types/lodash": "4.17.4",
     "@types/node": "^18.18.13",
     "ergol": "^1.0.2",
     "eslint-plugin-kuzzle": "^0.0.12",
@@ -36,7 +36,7 @@
     "kuzzle-sdk": "^7.11.*",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
-    "typescript": "5.1.*"
+    "typescript": "5.4.*"
   },
   "files": [
     "dist/**/"
