--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,23 +14,22 @@
     "ci:types": "vue-tsc --version && npm run test:types"
   },
   "dependencies": {
-    "lodash": "^4.17.21",
-    "vue-plugin-kuzzle": "^4.5.0",
     "@fortawesome/fontawesome-free": "6.2.*",
-    "@kuzzleio/iot-platform-frontend": "^3.1.0-beta.41",
-    "@types/lodash": "4.17.*",
+    "@kuzzleio/iot-platform-frontend": "3.1.0-beta.49",
     "@vuelidate/core": "2.0.*",
-    "kuzzle-device-manager-types": "2.4.0-beta.15"
+    "lodash": "^4.17.21",
+    "vue-plugin-kuzzle": "^4.5.0"
   },
   "devDependencies": {
-    "@types/lodash": "4.14.*",
+    "@types/lodash": "4.17.4",
     "@vitejs/plugin-vue2": "^2.2.0",
     "autoprefixer": "^10.4.15",
     "eslint-plugin-tailwindcss": "^3.14.3",
     "eslint-plugin-vue-kuzzle": "^0.0.12",
+    "kuzzle-device-manager-types": "2.4.0-beta.16",
     "sass": "1.63.*",
     "tailwindcss": "^3.4.1",
-    "typescript": "5.1.*",
+    "typescript": "5.4.*",
     "vite": "^4.4.6",
     "vue-tsc": "^1.8.10"
   }
