--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -19,7 +19,7 @@
   "main": "app.ts",
   "license": "Apache-2.0",
   "dependencies": {
-    "@kuzzleio/iot-platform-backend": "3.1.0-beta.45",
+    "@kuzzleio/iot-platform-backend": "3.1.0-beta.52",
     "kuzzle": "^2",
     "lodash": "^4.17.21"
   },
@@ -33,7 +33,8 @@
     "kuzzle-sdk": "^7.11.*",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.1",
-    "typescript": "5.1.*"
+    "typescript": "5.4.*",
+    "@kuzzleio/plugin-multi-tenancy": "*"
   },
   "files": [
     "dist/**/"
