--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -19,11 +19,12 @@
   "main": "app.ts",
   "license": "Apache-2.0",
   "dependencies": {
-    "@kuzzleio/iot-platform-backend": "3.1.0-beta.52",
+    "@kuzzleio/iot-platform-backend": "3.1.0-beta.61",
     "kuzzle": "^2",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "@kuzzleio/plugin-multi-tenancy": "*",
     "@types/jest": "^29.4.0",
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.18.13",
@@ -33,8 +34,7 @@
     "kuzzle-sdk": "^7.11.*",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.1",
-    "typescript": "5.4.*",
-    "@kuzzleio/plugin-multi-tenancy": "*"
+    "typescript": "5.4.*"
   },
   "files": [
     "dist/**/"
