--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "eslint-plugin-kuzzle": "0.0.12",
     "eslint-plugin-prettier": "^5.0.0",
     "prettier": "^3.2.5",
-    "turbo": "latest",
+    "turbo": "2.0.3",
     "typescript": "5.4.*"
   },
   "engines": {
