--- a/.github/workflows/deploy_main.workflow.yml
+++ b/.github/workflows/deploy_main.workflow.yml
@@ -28,8 +28,8 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ${{ env.KUZZLE_PAAS_REGISTRY }}
-          username: ${{ secrets.KUZZLE_PAAS_USERNAME }}
-          password: ${{ secrets.KUZZLE_PAAS_PASSWORD }}
+          username: ${{ secrets.KUZZLE_PAAS_REGISTRY_USERNAME }}
+          password: ${{ secrets.KUZZLE_PAAS_REGISTRY_PASSWORD }}
 
       - name: Login PaaS
         uses: kuzzleio/paas-action@v1.1.0
@@ -101,8 +101,8 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ${{ env.KUZZLE_PAAS_REGISTRY }}
-          username: ${{ secrets.KUZZLE_PAAS_USERNAME }}
-          password: ${{ secrets.KUZZLE_PAAS_PASSWORD }}
+          username: ${{ secrets.KUZZLE_PAAS_REGISTRY_USERNAME }}
+          password: ${{ secrets.KUZZLE_PAAS_REGISTRY_PASSWORD }}
 
       - name: Login PaaS
         uses: kuzzleio/paas-action@v1.1.0
