--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -19,7 +19,7 @@
   "main": "app.ts",
   "license": "Apache-2.0",
   "dependencies": {
-    "@kuzzleio/iot-platform-backend": "3.1.0-beta.61",
+    "@kuzzleio/iot-platform-backend": "3.2.0",
     "kuzzle": "^2",
     "lodash": "^4.17.21"
   },
