--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "6.2.*",
-    "@kuzzleio/iot-platform-frontend": "3.1.0-beta.61",
+    "@kuzzleio/iot-platform-frontend": "3.2.0",
     "@vuelidate/core": "2.0.*",
     "kuzzle-device-manager-types": "2.4.0-beta.16",
     "lodash": "^4.17.21",
