--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -1,26 +1,34 @@
-FROM kuzzleio/kuzzle-runner:18 AS builder
+FROM kuzzleio/kuzzle-runner:20 AS builder
 
 WORKDIR /var/app
+
+COPY package*.json .npmrc ./
+
+RUN npm ci
 
 COPY . .
 
-RUN npm install
-RUN npm run build
-RUN npm prune --production
+RUN npm run build \
+    && npm prune --omit=dev
 
-
-FROM node:18-bookworm-slim
-
-ARG KUZZLE_ENV="local"
-
-ENV NODE_ENV=production
-
-COPY --from=builder /var/app/dist /var/app
-COPY --from=builder /var/app/node_modules /var/app/node_modules
-COPY --from=builder /var/app/package.json /var/app/package.json
-COPY --from=builder /var/app/package-lock.json /var/app/package-lock.json
-COPY --from=builder /var/app/lib/environments/${KUZZLE_ENV}/kuzzlerc /var/app/.kuzzlerc
+FROM node:20-bookworm-slim
 
 WORKDIR /var/app
+
+ARG KUZZLE_ENV
+ARG KUZZLE_VAULT_KEY
+ARG PUPPETEER_SERVER_URL
+ARG PUPPETEER_SERVER_PORT
+
+ENV NODE_ENV=production \
+    KUZZLE_ENV=${KUZZLE_ENV} \
+    KUZZLE_VAULT_KEY=${KUZZLE_VAULT_KEY} \
+    PUPPETEER_SERVER_URL=${PUPPETEER_SERVER_URL} \
+    PUPPETEER_SERVER_PORT=${PUPPETEER_SERVER_PORT}
+
+COPY --from=builder /var/app/dist ./
+COPY --from=builder /var/app/node_modules ./node_modules
+COPY --from=builder /var/app/package*.json ./
+COPY --from=builder /var/app/lib/environments/${KUZZLE_ENV}/kuzzlerc ./.kuzzlerc
 
 CMD [ "node", "app.js" ]
