--- a/.github/workflows/development.workflow.yml
+++ b/.github/workflows/development.workflow.yml
@@ -9,10 +9,13 @@ env:
 jobs:
   lint:
     name: Lint
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-24.04
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Install additional libraries
+        uses: ./.github/actions/install-packages
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -32,11 +35,14 @@ jobs:
 
   functional-tests-backend:
     name: Functional Tests
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-24.04
     needs: [lint]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Install additional libraries
+        uses: ./.github/actions/install-packages
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
